# PythonProject-Template

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README.org  example.env  mise.toml  pyproject.toml  pytest.ini  setup.cfg
docs/: cursor-guidelines-fastapi.org  learning-notes.org
src/: example.py  math_example.py
src/lib/: __init__.py  compute.py  utils.py
tests/: __init__.py  conftest.py  test_example.py  test_math_example.py
