[project]
name = "python_project_template"
version = "0.1.0"
description = "A starter template for modern Python projects."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
# requires-python = ">=3.8"
dependencies = [
    "pip",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "python-lsp-server[all]",
    "ruff"
]

[tool.uv]

[tool.setuptools.packages.find]
where = ["src"] 

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv"
]

[tool.ruff.lint]
select = ["E", "F", "W291", "W293"]
fixable = ["ALL"]

[tool.ruff.format]
line-length = 100

