# pycodestyle only reads configuration from the [pycodestyle] section in setup.cfg, tox.ini, or a
# user-level configuration file (e.g., ~/.config/pycodestyle). It does not support the
# [tool.pycodestyle] section in pyproject.toml.

[project]
name = "python_project_template"
version = "0.1.0"
requires-python = ">=3.13"
description = "A starter template for modern Python projects."
readme = {file = "README.org", content-type = "text/plain"}
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "pip",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "python-lsp-server",
    "python-lsp-ruff",
    "ruff"
]

[tool.uv]

[tool.setuptools.packages.find]
where = ["src"] 

# Python LSP Server configuration
[tool.pylsp.plugins]
mypy = {enabled = true, live_mode = true, strict = false}
ruff = {enabled = true}
pyflakes = {enabled = false}
pycodestyle = {enabled = false}

ignore = [
    "E501",  # line too long, handled by formatter
]

fixable = ["ALL"]
unfixable = []

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []          # Ensure E501 is not ignored
