# pycodestyle only reads configuration from the [pycodestyle] section in setup.cfg, tox.ini, or a
# user-level configuration file (e.g., ~/.config/pycodestyle). It does not support the
# [tool.pycodestyle] section in pyproject.toml.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python_project_template"
version = "0.1.0"
description = "A starter template for modern Python projects."
readme = {file = "README.org", content-type = "text/plain"}
authors = [
    { name = "Roy Mathew", email = "rmathew8@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "python-lsp-ruff",
    "python-lsp-server[all]",
    "ruff",
]

[dependency-groups]
test = [
    "pytest>=8.0",
]

[tool.uv]
link-mode = "symlink"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_project_template = ["py.typed"]

# Python LSP Server configuration
[tool.pylsp.plugins]
mypy = {enabled = true, live_mode = true, strict = false}
ruff = {enabled = true}
pyflakes = {enabled = false}
pycodestyle = {enabled = false}

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]  # line too long, handled by formatter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

